# esp32c3-hal

./: Cargo.toml
src/: dma.rs  gpio.rs  lib.rs
src/aes/: aes.rs  ecb.rs  mod.rs
